upload working with DropZone

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,6 +23,15 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>Node Signage</title>
+
+  <!-- TODO REMOVE THIS BOOTSRAP LATER -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+    <style>
+      div.preview-images > img {
+        width: 30%;
+      }
+    </style>
+    
 </head>
 
 <body>
